# mids-capstone

./: README.md
home-again-api/: Dockerfile  README.md  pyproject.toml
home-again-api/src/: analytics.py  authentication.py  cases.py  cors.py  database.py  main.py  model.py
home-again-api/src/models/: case.py
home-again-api/src/queries/: disabilities_grouped.py  enrollments_by_age.py  enrollments_in_projects.py  enrollments_prior_living_situation.py  exit_destinations.py
home-again-api/src/scripts/: seed_mock_cases.py
home-again-api/src/services/: feature_mapper.py  services_recommender.py
home-again-api/tests/: test_api.py
home-again-frontend/: .env.production  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.json  vite.config.ts
home-again-frontend/src/: App.tsx  index.css
home-again-frontend/src/components/: dashboard-01.tsx  header.tsx  login-form.tsx
home-again-frontend/src/config/: awsCognito.json
home-again-frontend/src/hooks/: use-toast.ts  useCreateCase.tsx  useDeleteCase.ts  useEnrollmentsByAge.ts  useGetCase.ts  useGetCasePrediction.ts  useGetCases.ts  useUpdateCase.ts
home-again-frontend/src/layouts/: RootLayout.tsx
home-again-frontend/src/services/: apiClient.ts  (+1 more)
notebooks/: Data Pipeline RF Tuning.ipynb  Data Pipeline.ipynb  Full Logistic Regression Data Pipeline.ipynb  Full RandomForest Data Pipeline With Saved Label Encoder.ipynb  Full RandomForest Data Pipeline.ipynb  Test RDS Connection.ipynb  Test S3 Connection.ipynb
sql/: create_cases.sql
(+31 files in other folders)
